--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                         </div>-->
 
                         <div class="header_search">
-                            <input type="text" placeholder="Search for username.." style="color: #f6f4ebff">
+                            <input type="text" placeholder="Search for username..." style="color: #f6f4ebff">
                             <div class="icon-search">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
