Basic create outfit page, fixed pathing issues with fabrik logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="right-side lg:pr-4">
                         <!-- create outfit -->
-                        <a href="#"
+                        <a href="{% url 'create-outfit' %}"
                             class="bg-pink-500 flex font-bold hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
                             <ion-icon name="add-circle" class="-mb-1
                              mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Create Outfit
