search page working

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -36,7 +36,7 @@
 
                     <a href="trending.html">
                        <b><h1 style="
-                        font-family: Rozha One, serif, bold;
+                        font-family: Rozha One, serif;
                         font-size: 3.5rem; 
                         color: #f6f4ebff;
                         ">fabrik</h1></b>
