--- a/templates/index.html
+++ b/templates/index.html
@@ -233,7 +233,7 @@
                                     <img src="" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                 </div> -->
                             </a>
-                            <span class="block capitalize font-semibold "> <a href="#">@{{post.user}}</a> </span>
+                            <span class="block capitalize font-semibold "> <a href="/profile/{{post.user}}">@{{post.user}}</a> </span>
                         </div>
                         <div>
                         <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
@@ -322,7 +322,7 @@
                         </div> -->
 
                         <p>
-                            <a href="#"><i>{{post.user}} </i>- {{post.caption}}</a>
+                            <a href="/profile/{{post.user}}"><i>{{post.user}} </i>- {{post.caption}}</a>
                         </p>
 
                         <!-- <div class="border-t pt-4 space-y-4 ">
