Fixed profile html and profile views merge problem

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,8 +43,8 @@
 								{% if user_object.username != user.username %}
 								<a data-ripple=""><button type="submit" class="settings-or-follow">{{button_text}}</button></a>
 								{% else %}
-								<!-- <a href="/settings" data-ripple=""><button type="submit" class="settings-or-follow" >Account Settings</button></a> -->
-								<a href="/settings" data-ripple="">Account Settings</a>
+								<a href="/settings" data-ripple=""><button type="submit" class="settings-or-follow" >Account Settings</button></a>
+								<!-- <a href="/settings" data-ripple="">Account Settings</a> -->
 								{% endif %}
 							</div>
 						</form>
