--- a/templates/index.html
+++ b/templates/index.html
@@ -369,25 +369,31 @@
                 <div class="bg-white  shadow-md rounded-md overflow-hidden">
 
                     <div class="bg-gray-50  border-b border-gray-100 flex items-baseline justify-between py-4 px-6 ">
-                        <h2 class="font-semibold text-lg">Users You Can Follow</h2>
-                        <a href="#"> Refresh</a>
+                        <h2 class="font-semibold text-lg">Follow Suggestions</h2>
+                        <!-- <a href="#"> Refresh</a> -->
                     </div>
                     
                     <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
+
+                        {% for suggestion in suggestions_username_profile_list %}
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="profile">
-                                    <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
+                                <a href="profile/{{suggestion.user}}">
+                                    <img src="{{suggestion.profileimg.url}}" class="bg-gray-200 rounded-full w-10 h-10">
                                 </a>
                                 <div class="flex flex-col">
-                                    <span class="block capitalize font-semibold"> tomi_ml </span>
-                                    <span class="block capitalize text-sm"> 320k followers </span>
+                                    <span href="/profile/{{suggestion.user}}" class="block capitalize font-semibold"> {{suggestion.user}} </span>
+                                    <span href="/profile/{{suggestion.user}}" class="block capitalize text-sm"> {{suggestion.bio}} </span>
                                 </div>
                             </div>
                             
-                            <a href="#" class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "> Follow </a>
+                            <a href="/profile/{{suggestion.user}}" class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "> View User </a>
+                            {% csrf_token %}
+                            <!-- <a data-ripple=""><button type="submit" class="settings-or-follow">{{button_text}}</button></a> -->
                         </div>
-                        <div class="flex items-center justify-between py-3">
+                        {% endfor%}
+
+                        <!-- <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
                                 <a href="profile">
                                     <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
@@ -422,7 +428,7 @@
                                 </div>
                             </div>
                             
-                            <a href="#" class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "> Follow </a>
+                            <a href="#" class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "> Follow </a> -->
                         </div>
 
                     </div>
