--- a/templates/index.html
+++ b/templates/index.html
@@ -244,7 +244,7 @@
                                     <img src="" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                 </div> -->
                             </a>
-                            <span class="block capitalize font-semibold "> <a href="/profile/{{post.user}}">@{{post.user}}</a> </span>
+                            <span class="block font-semibold "> <a href="/profile/{{post.user}}">@{{post.user}}</a> </span>
                         </div>
                         {% if post.user == user.username %}
                         <div>
@@ -395,8 +395,8 @@
                                     <img src="{{suggestion.profileimg.url}}" class="bg-gray-200 rounded-full w-10 h-10">
                                 </a>
                                 <div class="flex flex-col">
-                                    <span href="/profile/{{suggestion.user}}" class="block capitalize font-semibold"> {{suggestion.user}} </span>
-                                    <span href="/profile/{{suggestion.user}}" class="block capitalize text-sm"> {{suggestion.bio}} </span>
+                                    <span href="/profile/{{suggestion.user}}" class="block font-semibold"> {{suggestion.user}} </span>
+                                    <span href="/profile/{{suggestion.user}}" class="block text-sm"> {{suggestion.bio}} </span>
                                 </div>
                             </div>
                             
