added location to profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,6 +49,7 @@
 							</div>
 						</form>
 						<div class="bio">{{user_profile.bio}}</div>
+						<div class="location" style="font-size: 1rem; color: white; margin: 10px;">Location: {{user_profile.location}}</div>
 					</h3>
 				</div>
 			</div>
