--- a/templates/setting.html
+++ b/templates/setting.html
@@ -27,7 +27,7 @@
 
                 <div class="flex items-center lg:justify-between justify-around">
 
-                    <a href="trending.html">
+                    <a href="/">
                        <b><h1 style="
                         font-family: Rozha One, serif;
                         font-size: 3.5rem; 
@@ -51,10 +51,10 @@
 
                 <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"><a href = '/'>Home</a> / Account Settings for <b> {{user.username}}</b></h1>
                 <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
-                    <li class="uk-active"><a href="#">General</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Notifications</a></li>
+                    <li class="uk-active"><a href="/settings">General</a></li>
+                    <li><a href="/profile/{{user.username}}">Profile</a></li>
+                    <!-- <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Notifications</a></li> -->
                     <!-- <li><a href="#">Social links</a></li> -->
                     <!-- <li><a href="#">Billing</a></li> -->
                     <!-- <li><a href="#">Security</a></li> -->
