--- a/templates/profile.html
+++ b/templates/profile.html
@@ -89,6 +89,11 @@
 						<li>
 							<a class="strip" href="{{clothing.image.url}}" title="" data-strip-group="mygroup" data-strip-group-options="loop: false">
 								<img src="{{clothing.image.url}}" style="height: 150px; width: 150px;" class="clothing" alt=""></a>
+								<!-- <div uk-lightbox>
+									<a href="{{post.image.url}}">  
+										<img src="{{post.image.url}}" alt="">
+									</a>
+								</div> -->
 						</li>
 						{% endfor %}
 					</ul>
